--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ actix-web = "4.4.1"
 percent-encoding = "2.3.1"
 postgres = "0.19.7"
 rand = "0.8.5"
+serde = { version = "1.0.195", features = ["derive"] }
 tokio = "1.35.1"
 tokio-postgres = "0.7.10"
 url = "2.5.0"
