--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,11 @@ default-run = "twolong_rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-cors = "0.7.0"
 actix-web = "4.4.1"
 dotenv = "0.15.0"
 easy-log = "0.1.2"
+env_logger = "0.11.1"
 postgres = "0.19.7"
 rand = "0.8.5"
 serde = { version = "1.0.196", features = ["derive"] }
